# palios-taey-nova

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.20250313_193800.bak  README.md  STREAMING_IMPLEMENTATION_PLAN.md  STREAMING_TOOL_USE.md  absolute_import_fix.sh  archive_files.sh  atlas_mission_nova_infrastructure.md  builder_to_builder.md  check_local.sh  claude_dc_launch.sh  claude_dc_quick_setup.sh  claude_dc_setup.sh  cleanup.sh  commit_message.txt  constants_fix.sh  deploy.sh  deploy_direct.sh.potential_duplicate  deploy_minimal.sh  deploy_simplified.sh  deployment_guide.md  deployment_verification.md  final_fix.sh  final_fix_v2.sh  fix_claude_dc.sh  fix_environment_config.sh  fix_loop.sh  generate_repository_index_detailed.sh  generate_repository_index_with_metadata.sh  implement-webhook-server.sh  index_output.txt  integration_test.py  pyproject.toml  rename_streamlit.sh  repository_report.json  requirements.txt  reset_claude_dc.sh  root_directory.md  (+8 more)
PALIOS-TAEY LLC/: mercury-backup-codes-jessetaeyai.txt
archive/: analyze_cache_tokens.py  deploy_direct.sh  docs_file_inventory.txt  fix_environment_config.sh  generate_repository_index_final.sh  implement_ai_ai_communication_framework.sh  loop.py
claude-dc-implementation/: CHANGES.md  IMPLEMENTATION_REPORT.md  PHASE2_FEATURES.md  README.md  SIMPLE_SETUP.md  __init__.py  app.py  claude-dc-error-log.md  claude-dc-implementation  communication_dashboard.py  dashboard.py  dashboard_app.py  demo.py  demo_palios.py  demo_server.py  deploy.sh  implementation_report.md  install_dashboard_components.sh  main.py  setup.sh  (+18 more)
(+37703 files in other folders)
